--- a/index.html
+++ b/index.html
@@ -662,10 +662,13 @@ Write-up coming soon ...
 <td>
 	
 <ul>
-<li>	ME6150: Numerical methods in thermal engineering (Jan--May 2016)
-<li>	ME1100: Undergraduate thermodynamics (Jul--Nov 2016)	
-<li>	ME6150: Numerical methods in thermal engineering (Jan--May 2017)
-<li>	ME6060: Combustion Fundamentals (Jul--Nov 2017)
+<li>	ME6150: Numerical methods in thermal engineering<br>	
+		Jan-May 2016<br>
+		Jan-May 2017<br>
+<li>	ME1100: Undergraduate thermodynamics <br>
+		Jul-Nov 2016<br>
+<li>	ME6060: Combustion Fundamentals <br>
+		Jul-Nov 2017<br>
 </ul>
 
 </td>
