--- a/index.html
+++ b/index.html
@@ -663,12 +663,12 @@ Write-up coming soon ...
 	
 <ul>
 <li>	ME6150: Numerical methods in thermal engineering<br>	
-		Jan-May 2016<br>
-		Jan-May 2017<br>
+		<i>Jan-May 2016</i><br>
+		<i>Jan-May 2017</i><br>
 <li>	ME1100: Undergraduate thermodynamics <br>
-		Jul-Nov 2016<br>
+		<i>Jul-Nov 2016</i><br>
 <li>	ME6060: Combustion Fundamentals <br>
-		Jul-Nov 2017<br>
+		<i>Jul-Nov 2017</i><br>
 </ul>
 
 </td>
