--- a/index.html
+++ b/index.html
@@ -662,12 +662,12 @@ Write-up coming soon ...
 <td>
 	
 <ul>
-<li>	ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents<br>
+<li>	ME6150: Numerical methods in thermal engineering - <a href="teaching/outline_ME6150.pdf" target="_blank">Course contents</a><br>
 		<i>Jan-May 2016</i><br>
 		<i>Jan-May 2017</i><br><br>
-<li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents<br>
+<li>	ME1100: Undergraduate thermodynamics - <a href="teaching/outline_ME1100.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2016</i><br><br>
-<li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents<br>
+<li>	ME6060: Combustion Fundamentals - <a href="teaching/outline_ME6060.pdf" target="_blank">Course contents</a><br>
 		<i>Jul-Nov 2017</i><br><br>
 </ul>
 
