--- a/index.html
+++ b/index.html
@@ -418,10 +418,10 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 <td>
 <h2>Collaborations</h2>
 <ul>
-<li> <a href="http://sivaramambikasaran.com"> Dr. Sivaram Ambikasaran</a>, Department of Mathematics, IIT Madras</br>
-<li> Dr. V. Raghavan, Department of Mechanical Engineering, IIT Madras</br>
-<li> <a href="https://home.iitm.ac.in/anand_k/"> Dr. K. Anand, Department of Mechanical Engineering, IIT Madras</br>
-<li> <a href="http://jacobsschool.ucsd.edu/faculty/faculty_bios/index.sfe?fmp_recid=153"> Prof. Kalyanasundaram Seshadri</a>, University of San Diego</br>
+<li> <a href="http://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, Department of Mathematics, IIT Madras</br>
+<li> <a href="https://mech.iitm.ac.in/meiitm/personnal/v-raghavan/">Dr. V. Raghavan</a>, Department of Mechanical Engineering, IIT Madras</br>
+<li> <a href="https://home.iitm.ac.in/anand_k/">Dr. K. Anand</a>, Department of Mechanical Engineering, IIT Madras</br>
+<li> <a href="http://jacobsschool.ucsd.edu/faculty/faculty_bios/index.sfe?fmp_recid=153">Prof. Kalyanasundaram Seshadri</a>, University of San Diego</br>
 <li> <a href="https://www.ptb.de/cms/en/ptb/fachabteilungen/abt3/fb-33/ravi-fernandes.html">Prof. Ravi Fernandes</a>, Physikalisch-Technische Bundesanstalt</br>
 <li> <a href="https://pepiot.mae.cornell.edu"> Dr. Perrine Pepiot</a>, Cornell University</br>
 <li> <a href="https://www.itv.rwth-aachen.de/index.php?id=46">Prof. Heinz Pitsch</a>, RWTH Aachen</br>
