Remove topics for MS/PhD and M. Tech

--- a/index.html
+++ b/index.html
@@ -277,8 +277,10 @@ I am currently working with <a href="http://pepiot.mae.cornell.edu" target="_bla
 </tr>
 </table>
 
+<!-- 
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 <h2> <a href="project_writeup/MTech_DD_2017.html" target="_blank"> <center><i>Possible M. Tech/DD projects</i></center></a></h2>
+-->
 
 <h1><center> Research highlights </center></h1>
 <!-- Slide show from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_slideshow-->
@@ -650,8 +652,9 @@ Write-up coming soon ...
 </tr>
 </table>
 
-<h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
+<!-- <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>Abstracts for topics floated for MS/PhD admissions (Winter 2017)</i></center></a></h2>
 <h2> <a href="project_writeup/MS_PhD_Winter_2017.html" target="_blank"> <center><i>M. Tech/DD projects</i></center></a></h2>
+-->
 
 </div>
 	
