--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@ Fig: Species profiles in a jet stirred reactor at P = 1 bar, phi = 1.5; symbols:
 <td width="15%">
 <center><img src="./images/Aditya_Lele.JPG" width="170">	
 </br>
-<h4>Aditya Dilip Lele</h4>
+<h4><a href="https://adityadlele.github.io" target="_blank">Aditya Dilip Lele</a> <br></h4>
 	</center>
 <!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune in 2015. He is currently pursuing his Masters at IIT Madras, on the broad topic of kinetic modeling and combustion simulations of biodiesel fuel. His thesis is co-advised by Dr. K. Anand at IIT Madras.</br>
