--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 <td>
 <h2> <a id="Open_source_Codes"> Open source codes</a></h2>
 <ul>
-<li>  <a href="dummy">Reduced mechanism based on Quasi-Steady State approximations</a> (Credits: Rohit Khare)
+<li>  <a href="https://bitbucket.org/krithika1987/qss_reduction">Reduced mechanism based on Quasi-Steady State approximations</a> (Credits: Rohit Khare)
 <li> <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization">Reaction mechanism optimization</a> (Credits: T. V. Vaisakh, M. Tech 2017)
 <li> <a href="https://github.com/mcsanjay/Program-input-to-THERM">SMILES based interface to Thermodynamic
 Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
