book chapter draft

--- a/index.html
+++ b/index.html
@@ -619,6 +619,25 @@ All mechanism are made available and have been validated as discussed in the jou
 <!--<table border="1" cellspacing="1" cellpadding="5" width="100%">-->
 <!-- !!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!! -->
 
+<tr>
+<td>
+<h2>Book Chapter</h2>
+<!-- <h4>Click each item for more details</h4> -->
+
+<ul>
+	
+	
+<div id="flip0">
+<li> A. D. Lele, K. Anand, and K. Narayanaswamy. "Surrogates for Biodiesel: Review and Challenges." Biofuels. Springer Singapore, 2017. 177-199.
+</div>
+<div id="panel0">
+	<ul style="list-style-type:square">
+	<li><a href="https://www.dropbox.com/s/eoc4ax2ccyjcdd8/Biodiesel_Surrogate_Lele_Krishnasamy_Narayanaswamy_R1.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
+	</ul>
+</div>	
+<br>
+
 </table>
 
 </div>
