--- a/index.html
+++ b/index.html
@@ -633,7 +633,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <div id="panel0">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/eoc4ax2ccyjcdd8/Biodiesel_Surrogate_Lele_Krishnasamy_Narayanaswamy_R1.pdf?dl=0" target="_blank">Preprint*</a></li>
-	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
+	<li><a href="https://link.springer.com/chapter/10.1007/978-981-10-3791-7_10" target="_blank">Official version</a></li>
 	</ul>
 </div>	
 <br>
