--- a/index.html
+++ b/index.html
@@ -512,8 +512,29 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <!-- <h4>Click each item for more details</h4> -->
 
 <ul>
-	
-	
+
+<div id="flip0">
+<li> Rohit S Khare; Senthil Kumar Parimalanathan, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
+</div>
+<div id="panel0">
+	<ul style="list-style-type:square">
+	<li><a href="" target="_blank">Preprint*</a></li>
+	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
+	</ul>
+</div>	
+<br>
+
+<div id="flip0">
+<li> Aditya Dilip Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
+</div>
+<div id="panel0">
+	<ul style="list-style-type:square">
+	<li><a href="" target="_blank">Preprint*</a></li>
+	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
+	</ul>
+</div>	
+<br>
+
 <div id="flip0">
 <li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
 </div>
