adding pre-print of RK and AL papers

--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <ul>
 
 <div id="flip0">
-<li> Rohit S Khare; Senthil Kumar Parimalanathan, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
+<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
@@ -525,7 +525,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <br>
 
 <div id="flip0">
-<li> Aditya Dilip Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
+<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
