--- a/index.html
+++ b/index.html
@@ -423,8 +423,43 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
-</td>
-</tr>
+<tr>
+<td>
+<ul>
+<li> <h3>Oxidation kinetics of alternative aviation fuels:</h3> 
+Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. This project involves modeling the oxidation of these fuels using a representative mixture. Theoretical in nature, the research focus is on identifying such a suitable mixture and arriving at a kinetic scheme to predict the fuel's combustion behavior from a fundamental approach. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
+</br>	
+	<td width="15%">
+	<center><img src="./images/Praise.jpg" width="150">	
+	</br>
+	<h4>Praise Noah Johnston</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Praise obtained his B. Tech in Mechanical Engineering from ...
+</p></br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</ul>
+
+<tr>
+<td>
+<ul>
+<li> <h3>Surrogates for liquid phase applications:</h3> 
+Surrogate mixtures are often used to emulate gas phase combustion characteristics of real fuels, such as heating value, sooting characteristics, and propensity to ignition. These cannot be used as such in liquid phase applications, where multi-phase processes, such as spray injection, are important. Typically, for these applications, surrogates are proposed by matching targets such as density, viscosity, and distillation curves between the real fuel and the surrogate. However, these targets do not pertain to a combustion environment. One attractive option to include evaporation and phase equilibrium dynamics in the surrogate definition is to study the combustion characteristics of an isolated droplet. This project involves simulating the burning process of isolated fuel droplets at low gravity for neat fuel components as well as mixtures of hydrocarbons relevant as transportation fuel surrogates. Evaporation rates of fuels in this simple configuration are useful quantities to describe the multi-phase effects in a combusting environment.
+
+<br><br>
+In this project, numerical solution procedure to predict the droplet burning accounting for the interface conditions will be developed. Techniques to obtain solutions with reduced computational time will be explored. The validity of the model will be ascertained based on the vast data available in the literature. Thereafter, evaporation rate rules will be developed for the surrogate mixture in terms of the components, and investigated if it is indeed an appropriate measure or if other additional parameters may be needed to come up with a good surrogate valid for liquid-phase applications. 
+
+</br>	
+	<td width="15%">
+	<center><img src="./images/Praise.jpg" width="150">	
+	</br>
+	<h4>Pragnesh Rana Rajubhai</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Pragnesh obtained his B. Tech in Mechanical Engineering from ...
+</p></br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</ul>
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -515,7 +550,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 
 <li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
 	<ul style="list-style-type:square">
-	<li><a href="" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Preprint*</a></li>
 	<!--<li><a href="http://www.sciencedirect.com/science/article/pii/S1540748916300554" target="_blank">Journal version</a></li>-->
 	</ul>
 <br>
@@ -671,7 +706,7 @@ All mechanism are made available and have been validated as discussed in the jou
 <!-- <a id="Available_research_projects"> Write-up coming soon ... </a> -->
 Write-up coming soon ...
 <ul>
-	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a> 
+<!-- 	<li> <a href="project_writeup/Alternative_Fuel_Combustion.html" target="_blank"> Alternative Fuel Combustion </a> -->
 <!-- Development of kinetic model for Fischer-Tropsch fuels -->
 	<li> Development of kinetic model for oxygenated fuels (knock-reduction additives)
 	<li> <a href="project_writeup/Biodiesel_Combustion.html" target="_blank"> Biodiesel Combustion </a>
@@ -683,7 +718,7 @@ Write-up coming soon ...
 	<li> Development of structure based compact reaction models
 	<li> Development of canonical kinetics solvers and post-processing tools
 	<li> Simulation driven surrogate formulation
-	<li> <a href="project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html" target="_blank">Surrogate for liquid-phase applications</a>
+<!--	<li> <a href="project_writeup/Surrogate_Spherosymmetric_Droplet_Vaporization.html" target="_blank">Surrogate for liquid-phase applications</a> -->
 	<li> Thermodynamic property estimation for cyclic species
 </ul>
 
