Student info editing table organization

--- a/index.html
+++ b/index.html
@@ -460,6 +460,9 @@ Pragnesh obtained his B. Tech in Mechanical Engineering from ...
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
+</td>
+</tr>
+</table>
 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
@@ -558,7 +561,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Preprint*</a></li>
 </ul>
-	<br>
+<br>
 
 <li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
 	<ul style="list-style-type:square">
