--- a/index.html
+++ b/index.html
@@ -553,19 +553,19 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 
 <li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
 <br>
 
 <li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
 <br>
 
 <li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
 <br>
 	
