Make preprint version under review explicit

--- a/index.html
+++ b/index.html
@@ -548,6 +548,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <td>
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
+<i>Submitted versions of articles that are still under review and pre-prints of publications are provided whenever possible to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
 
 <ul>
 
