--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <td>
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
-<i>Submitted versions of articles that are still under review and pre-prints of publications are provided whenever possible to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
+<i>Submitted versions of manuscripts that are still under review and pre-prints of publications are provided to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
 
 <ul>
 
@@ -564,10 +564,14 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </ul>
 <br>
 
-<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
+<div id="flip0">
+	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
+</div>
+<div id="panel0">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
+</div>
 <br>
 	
 
