--- a/project_writeup/Optimization_in_Combustion.html
+++ b/project_writeup/Optimization_in_Combustion.html
@@ -16,6 +16,8 @@ h2   {color: black;}
 </style>
 </head>
 
+**This project has been taken up. Not available anymore ...**
+
 <h2>Abstract</h2>
 
 The progress rates of individual steps in the oxidation of fuels are uncertain. In combustion studies, an optimized model is arrived at by taking these uncertainties into account. This project initially involves developing a black box tool to optimize reaction schemes based on existing ideas. A starting point will be the in-house code -- <a href="https://github.com/vaisakh-tv/Reaction-mechanism-Optimization" style="color: rgb(0,0,255)">Reaction mechanism optimization</a>. Improvements will be suggested to existing methods to achieve reduced computational cost as well ensure physical meaning in the optimized models.
