--- a/index.html
+++ b/index.html
@@ -207,6 +207,22 @@ $(document).ready(function(){
 });
 </script>
 
+<script>
+$(document).ready(function(){
+  $("#flip6").click(function(){
+    $("#panel6").slideToggle("slow");
+  });
+});
+</script>
+
+<script>
+$(document).ready(function(){
+  $("#flip7").click(function(){
+    $("#panel7").slideToggle("slow");
+  });
+});
+</script>
+
 <style> 
 #panel,#flip
 {
@@ -515,16 +531,24 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 
 <ul>
 
-<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
+<div id="flip6">
+	<li> Rohit Khare, P. Senthil Kumar, V. Raghavan, Krithika Narayanaswamy, "A comprehensively validated compact mechanism for dimethyl ether oxidation: an experimental and computational study" (under review)
+</div>
+<div id="panel6">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
+</div>
 <br>
 
-<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
+<div id="flip7">
+	<li> Aditya Lele, Sonal K. Vallabhuni, Kai Moshammer, Ravi X. Fernandes, Anand Krishnasamy, Krithika Narayanaswamy, "Experimental and chemical kinetic modeling investigation of methyl butanoate as a component of biodiesel surrogate" (under review)
+</div>
+<div id="panel7">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
 </ul>
+</div>
 <br>
 
 <div id="flip0">
