--- a/index.html
+++ b/index.html
@@ -439,6 +439,23 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
 
+<tr>
+<td>
+<ul>
+<li> <h3>Oxidation kinetics of alternative aviation fuels:</h3> 
+Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To understand their combustion characteristics, a suitable reference mixture to mimic a chosen alternative fuel is identified, and a kinetic scheme to predict the fuel's combustion behavior from a fundamental approach is being developed. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
+</br>	
+	<td width="15%">
+	<center><img src="./images/Praise_Noah_Johnston.jpg" width="150">	
+	</br>
+	<h4>Praise Noah Johnston</h4>
+	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+Praise obtained his B. Tech in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of alternative fuels, particularly relevant to aviation. 
+</p></br>
+	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</ul>
+
 </td>
 </tr>
 </table>
