--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@ Shanmugasundaram obtained his B. Tech and M. Tech in Mechanical Engineering from
 <td>
 <ul>
 <li> <h3>Oxidation kinetics of alternative aviation fuels:</h3> 
-Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To understand their combustion characteristics, a kinetic model for a  suitable reference mixture that mimic a chosen alternative fuel is being developed to predict the fuel's combustion behavior from a fundamental approach. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
+Renewable and alternative fuels for aviation have advantages of lesser emissions and clean burning ability. To predict, assess, and understand their combustion characteristics from a fundamental approach, a kinetic model for a  suitable reference mixture that mimic a chosen alternative fuel is being developed. This opens up avenues to study several `drop-in alternatives' to current day aviation fuels. 
 </br>	
 	<td width="15%">
 	<center><img src="./images/Praise_Noah_Johnston.jpg" width="150">	
