--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Renewable and alternative fuels for aviation have advantages of lesser emissions
 	<td width="15%">
 	<center><img src="./images/Praise_Noah_Johnston.jpg" width="150">	
 	</br>
-	<h4>Praise Noah Johnston</h4>
+	<h4>Praise Noah Johnson</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Praise obtained his B. Tech in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of alternative fuels, particularly relevant to aviation. 
