--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@ Renewable and alternative fuels for aviation have advantages of lesser emissions
 	<h4>Praise Noah Johnson</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Praise obtained his B. Tech in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of alternative fuels, particularly relevant to aviation. 
+Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering College, Coimbatore in 2017. He is presently pursuing his Masters at IIT Madras. His research work centers on kinetics of alternative fuels, particularly relevant to aviation. 
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
