--- a/project_writeup/Biodiesel_Combustion.html
+++ b/project_writeup/Biodiesel_Combustion.html
@@ -17,6 +17,7 @@ h2   {color: black;}
 </head>
 
 <h2>Abstract</h2>
+** Not available anymore **
 
 Biodiesel is being increasingly used in combination with diesel fuel in CI engines because of being renewable and resulting in reduced emissions. This project focuses on a fundamental study to identify the importance of different constituents in biodiesel and develop a kinetic model to describe its oxidation. This opens up options to study blends of biodiesel with diesel fuel as well. 
 
