SurOPTI accepted finally

--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@ Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute
 
 <ul>	
 <li> <h3>Extinction studies of oxygenated fuels:</h3>
-Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. </br> </br>
+Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and mefSimulatiothanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. </br> </br>
 <!-- </br> </br>
 <figure><center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
 <figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
@@ -578,11 +578,11 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <br>
 
 <div id="flip0">
-	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (under review).
+	<li> K. Narayanaswamy, P. Pepiot "Simulation-driven formulation of transportation fuel surrogates", Combustion Theory and Modelling (accepted).
 </div>
 <div id="panel0">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
 </ul>
 </div>
 <br>
