edit mma description

--- a/index.html
+++ b/index.html
@@ -427,10 +427,12 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 <td>
 <ul>
 <li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
-		Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities. 
+		<!--Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities.-->
+		In these days, synthetic and natural polymeric esters find applications in transport and construction sectors, where fire safety is an important concern. One polymer that is wide used is poly methyl methacrylate (PMMA), which almost completely undergoes thermal decomposition into methyl methacrylate (its monomer) $\rm CH_{2}\text{=}C(CH_{3})\text{-}C(\text{=}O)\text{-}O\text{-}CH_{3}$ (MMA) at ${\sim}250$--$300^\circ$C. In order to analyze the high temperature gas phase oxidation of PMMA, and thereby predict its fire behaviour (such as burning rate, temperature of the material and heat fluxes) with less computational effort, a compact kinetic model for the oxidation of its primary decomposition product, MMA, is most essential. As a part of this work, a compact reaction model to describe its oxidation is developed and validated against fundamental experimental datasets obtained in premixed flames, starting with a detailed mechanism proposed by the Lawrence Livermore group. Evaluating the model against these data sets point to the need to revise the kinetic model, which is achieved by adopting rate constants of key reactions from recent literature for analogous molecules. The updated compact kinetic model is able to predict the major species in the flat flame as well the burning velocity of MMA satisfactorily. The final `short MMA mechanism' consists of 88 species and 1092 reactions. 
 </br>
 </br>
-<center><img src="./current_research/mma_shanmugasundaram/LFF_plot_1.jpg" width="425">	<img src="./current_research/mma_shanmugasundaram/LFF_plot_2.jpg" width="415">	</br>
+<center><img src="./current_research/mma_shanmugasundaram/LFF_Fig4.jpg" width="425">
+	<!--<img src="./current_research/mma_shanmugasundaram/LFF_plot_1.jpg" width="425">	<img src="./current_research/mma_shanmugasundaram/LFF_plot_2.jpg" width="415">	</br> -->
  </br>
 	Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
 data of major species, dashed lines: simulations
