edit mma description

--- a/index.html
+++ b/index.html
@@ -401,11 +401,11 @@ Aditya obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute
 
 <ul>	
 <li> <h3>Extinction studies of oxygenated fuels:</h3>
-Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and mefSimulatiothanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. </br> </br>
+Addition to oxygenates to diesel fuel has been found to reduce soot emissions. Nonetheless, the resulting changes in the extinction and auto-ignition characteristics of the fuel mixture have not yet been fully understood. Considering two important oxygenates, dimethyl ether and methanol, we undertook a fundamental analysis, which reveals that blending small amounts of oxygenates with diesel increases its resistance to extinction, which can be of use in applications such as burners, furnaces and pre-vaporizers. We also find that the auto-ignition characteristics are not altered much due to blending. This study suggests that in the presence of oxygenate, a combustion system can be made more stable even at higher strain rates and at the same time operate with reduced emissions. </br> </br>
 <!-- </br> </br>
 <figure><center><img src="./current_research/oxygenates_rohit/a2EvsYF1.jpg"  style="float: left; width: 30%; margin-right: 1%; margin-bottom: 0.5em;"> </center>
 <figcaption> Fig: Diesel and blends of diesel and oxygenates: Variation of fuel mass fraction, YF,1, as a function of strain rate at extinction, a2,E (presented at the 10th U.S. National Combustion Meeting, 2017)  </figcaption> </figure> -->
-<center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 50%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
+<center><img src="./current_research/oxygenates_rohit/23spec_14step_results.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
  
 In order to critically evaluate the overall combustion behaviour of DME via numerical simulations, an accurate as well as compact kinetic mechanism to describe its oxidation is most essential. A short kinetic mechanism consisting of 23 species and 88 elementary reactions is proposed to describe the oxidation of DME based on the detailed San Diego mechanism. The short mechanism accurately reproduces the available experimental data for ignition delays, laminar flame speeds, and species profiles in flow reactors as well as jet-stirred reactors. 
 </br> </br>
@@ -428,14 +428,19 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 <ul>
 <li> <h3>Compact kinetic model for methyl methacrylate oxidation:</h3> 
 		<!--Study of kinetics of methylmethacrylate, which is a monomer of PMMA that is used in construction sector, is relevant to fire research. A compact reaction model to describe its oxidation is being developed and validated against fundamental experimental datasets obtained in canonical configurations, which isolate the kinetics from the flow related complexities.-->
-		In these days, synthetic and natural polymeric esters find applications in transport and construction sectors, where fire safety is an important concern. One polymer that is wide used is poly methyl methacrylate (PMMA), which almost completely undergoes thermal decomposition into methyl methacrylate (its monomer) $\rm CH_{2}\text{=}C(CH_{3})\text{-}C(\text{=}O)\text{-}O\text{-}CH_{3}$ (MMA) at ${\sim}250$--$300^\circ$C. In order to analyze the high temperature gas phase oxidation of PMMA, and thereby predict its fire behaviour (such as burning rate, temperature of the material and heat fluxes) with less computational effort, a compact kinetic model for the oxidation of its primary decomposition product, MMA, is most essential. As a part of this work, a compact reaction model to describe its oxidation is developed and validated against fundamental experimental datasets obtained in premixed flames, starting with a detailed mechanism proposed by the Lawrence Livermore group. Evaluating the model against these data sets point to the need to revise the kinetic model, which is achieved by adopting rate constants of key reactions from recent literature for analogous molecules. The updated compact kinetic model is able to predict the major species in the flat flame as well the burning velocity of MMA satisfactorily. The final `short MMA mechanism' consists of 88 species and 1092 reactions. 
+		In these days, synthetic and natural polymeric esters find applications in transport and construction sectors, where fire safety is an important concern. One polymer that is wide used is poly methyl methacrylate (PMMA), which almost completely undergoes thermal decomposition into methyl methacrylate (its monomer) CH<sub>2</sub>=C(CH<sub>3</sub>)-C(=O)-O-CH<sub>3</sub> (MMA) at ~250-300<sup>o</sup>C. In order to analyze the high temperature gas phase oxidation of PMMA, and thereby predict its fire behaviour (such as burning rate, temperature of the material and heat fluxes) with less computational effort, a compact kinetic model for the oxidation of its primary decomposition product, MMA, is most essential.  </br> </br>
+		
+<center><img src="./current_research/mma_shanmugasundaram/LFF_Fig4.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
+
+		As a part of this work, a compact reaction model to describe its oxidation is developed and validated against fundamental experimental datasets obtained in premixed flames, starting with a detailed mechanism proposed by the Lawrence Livermore group. </br></br>
+		
+		Evaluating the model against these data sets point to the need to revise the kinetic model, which is achieved by adopting rate constants of key reactions from recent literature for analogous molecules. The updated compact kinetic model is able to predict the major species in the flat flame as well the burning velocity of MMA satisfactorily. The final `short MMA mechanism' consists of 88 species and 1092 reactions. 
 </br>
 </br>
-<center><img src="./current_research/mma_shanmugasundaram/LFF_Fig4.jpg" width="425">
 	<!--<img src="./current_research/mma_shanmugasundaram/LFF_plot_1.jpg" width="425">	<img src="./current_research/mma_shanmugasundaram/LFF_plot_2.jpg" width="415">	</br> -->
  </br>
-	Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
-data of major species, dashed lines: simulations
+	<!--Fig: Species profiles of Laminar flat flame at atmospheric condition; symbols: experimental
+data of major species, dashed lines: simulations-->
 </br>
 </center> 
 </br>	
