edit mma description

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 		
 <center><img src="./current_research/mma_shanmugasundaram/LFF_Fig4.jpg"  style="float: left; width: 52%; margin-right: 2%; margin-bottom: 0.5em;"> </center> 
 
-		As a part of this work, a compact reaction model to describe its oxidation is developed and validated against fundamental experimental datasets obtained in premixed flames, starting with a detailed mechanism proposed by the Lawrence Livermore group. </br></br>
+		As a part of this work, a compact reaction model to describe the oxidation of MMA is developed and validated against fundamental experimental datasets obtained in premixed flames, starting with a detailed mechanism proposed by the Lawrence Livermore group. </br></br>
 		
 		Evaluating the model against these data sets point to the need to revise the kinetic model, which is achieved by adopting rate constants of key reactions from recent literature for analogous molecules. The updated compact kinetic model is able to predict the major species in the flat flame as well the burning velocity of MMA satisfactorily. The final `short MMA mechanism' consists of 88 species and 1092 reactions. 
 </br>
@@ -486,6 +486,7 @@ Praise obtained his B.E in Mechanical Engineering from Maharaja Engineering Coll
 <li> <a href="https://home.iitm.ac.in/anand_k/">Dr. K. Anand</a>, Department of Mechanical Engineering, IIT Madras</br>
 <li> <a href="http://jacobsschool.ucsd.edu/faculty/faculty_bios/index.sfe?fmp_recid=153">Prof. Kalyanasundaram Seshadri</a>, University of San Diego</br>
 <li> <a href="https://www.ptb.de/cms/en/ptb/fachabteilungen/abt3/fb-33/ravi-fernandes.html">Prof. Ravi Fernandes</a>, Physikalisch-Technische Bundesanstalt</br>
+<li> <a href="https://www.researchgate.net/profile/D_Knyazkov">Dr. Denis Knyazkov</a>, Voevodsky Institute of Chemical Kinetics and Combustion, Russian Academy of Sciences</br>
 <li> <a href="https://pepiot.mae.cornell.edu"> Dr. Perrine Pepiot</a>, Cornell University</br>
 <li> <a href="https://www.itv.rwth-aachen.de/index.php?id=46">Prof. Heinz Pitsch</a>, RWTH Aachen</br>
 </ul>
