adding Supplementary to SurOPTI

--- a/index.html
+++ b/index.html
@@ -591,6 +591,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <div id="panel0">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/kismsuz6r0vhz13/Paper_SurOPTI.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.dropbox.com/s/eca2h8eko3vix9l/Supporting_Materials.pdf?dl=0" target="_blank">Supplementary document</a></li>
 </ul>
 </div>
 <br>
