adding Supplementary to SurOPTI

--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/sh/f238210u84jyb9c/AAAVwHEh0j0L267Hrvk0PgpYa?dl=0" target="_blank">Supplementary materials*</a></li>
+	<li><a href="https://www.dropbox.com/sh/f238210u84jyb9c/AAAVwHEh0j0L267Hrvk0PgpYa?dl=0" target="_blank">Supplementary materials</a></li>
 	</ul>
 </div>	
 <br>
@@ -561,7 +561,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <td>
 <h2>Journal publications</h2>
 <!-- <h4>Click each item for more details</h4> -->
-<i>Submitted versions of manuscripts that are still under review and pre-prints of publications are provided to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
+<i>*Submitted versions of manuscripts that are still under review and pre-prints of publications are provided to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
 
 <ul>
 
@@ -570,7 +570,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>
 <div id="panel6">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/fe9opxvmv59cnzw/Paper_5.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
 </ul>
 </div>
 <br>
@@ -580,7 +580,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 </div>
 <div id="panel7">
 	<ul style="list-style-type:square">
-	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Submitted version (under review)</a></li>
+	<li><a href="https://www.dropbox.com/s/0d70csp92rlfv7k/MB_paper_submission_else.pdf?dl=0" target="_blank">Submitted version* (under review)</a></li>
 </ul>
 </div>
 <br>
