edit pragnesh details

--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ In this project, numerical solution procedure to predict the droplet burning acc
 	<h4>Pragnesh Rana Rajubhai</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. He is currently pursuing his Masters(interdisciplinary) at IIT Madras under Dr.Krithika, Department of Mechanical and Dr.Sivaram, Department of Mathematics. His research topic is concentrated on Simulation of Droplet Combustion involving Accurate Chemical Kinetics.
+Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. He is currently pursuing his Masters (interdisciplinary) at IIT Madras under the guidance of Dr.Sivaram, Department of Mathematics and myself. His research topic is concentrated on Simulation of Droplet Combustion involving Accurate Chemical Kinetics.
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
