--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@ In this project, numerical solution procedure to predict the droplet burning acc
 	<td width="15%">
 	<center><img src="./images/Pragnesh.jpg" width="150">	
 	</br>
-	<h4>Pragnesh Rana Rajubhai</h4>
+	<h4>Pragnesh Rajubhai Rana</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
 Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. He is currently pursuing his Masters (interdisciplinary) at IIT Madras under the guidance of Dr. Sivaram Ambikasaran and myself. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics.
