--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@ In this project, numerical solution procedure to predict the droplet burning acc
 	<h4>Pragnesh Rajubhai Rana</h4>
 	<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
 </center>
-Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. He is currently pursuing his Masters (interdisciplinary) at IIT Madras under the guidance of Dr. Sivaram Ambikasaran and myself. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics.
+Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological University in 2016. He is currently pursuing his Masters (interdisciplinary) at IIT Madras. His research topic focuses on simulation of droplet combustion with accurate chemical kinetics. His thesis is co-advised by Dr. Sivaram Ambikasaran at IIT Madras.
 </p></br>
 	<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
 </ul>
