--- a/index.html
+++ b/index.html
@@ -500,6 +500,21 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 <table border="1" cellspacing="1" cellpadding="5" width="100%">
 <tr>
 <td>
+<h2>Funding sources</h2>
+<ul>
+<li> New Faculty Initiation Grant, Project No. MEE/15-16/845/NFIG: September 2015--2017
+<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFIG: November 2017--2020
+<li> InnoINDIGO BiofCFD project awarded by DST: November 2017--2020
+<li> Indo-Russian project awarded by DST under Grant No. 16-49-02017: October 2016--2019
+</ul>
+</td>
+</tr>
+</table>
+
+
+<table border="1" cellspacing="1" cellpadding="5" width="100%">
+<tr>
+<td>
 <h2>Collaborations</h2>
 <ul>
 <li> <a href="http://sivaramambikasaran.com">Dr. Sivaram Ambikasaran</a>, Department of Mathematics, IIT Madras</br>
@@ -529,6 +544,8 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 </td>
 </tr>
 </table>
+
+
 </div>
 
 
