--- a/index.html
+++ b/index.html
@@ -503,9 +503,10 @@ Pragnesh obtained his B.E. in Mechanical Engineering from Gujarat Technological 
 <h2>Funding sources</h2>
 <ul>
 <li> New Faculty Initiation Grant, Project No. MEE/15-16/845/NFIG: September 2015--2017
-<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFIG: November 2017--2020
-<li> InnoINDIGO BiofCFD project awarded by DST: November 2017--2020
+<li> Exploratory Research Project, May 2016--2017
 <li> Indo-Russian project awarded by DST under Grant No. 16-49-02017: October 2016--2019
+<li> InnoINDIGO BiofCFD project awarded by DST: November 2017--2020
+<li> New Faculty Seed Grant, Project No. MEE/15-16/845/NFIG: November 2017--2020
 </ul>
 </td>
 </tr>
