journal version of CNF 2016

--- a/index.html
+++ b/index.html
@@ -653,6 +653,7 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <div id="panel2">
 	<ul style="list-style-type:square">
 	<li><a href="https://www.dropbox.com/s/u90a4whlvf8ot5a/CLA_Article.pdf?dl=0" target="_blank">Preprint*</a></li>
+	<li><a href="https://www.sciencedirect.com/science/article/pii/S0010218015004563" target="_blank">Journal version</a></li>
 	<li>Component Library framework: <a href="https://www.dropbox.com/sh/51zin8ft08t2703/AADZcLs2UbVn7InLimuuIUqMa?dl=0" target="_blank">Mix-and-match mechanism generation tool</a></li>
  	Validation results: 
 	<ul style="list-style-type:circle"> 
